set up basic architecture

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,19 +1,5 @@
 // General Branding colors
-$red: #ff5454;
 $blue: #000075;
-$orange: #ffce00;
-$green: #2effc3;
-$gray-background: #F5F5FC;
-$separator: 15px;
-
-// Header
-$header-height: 90px;
 
 // List
-$font-color: #3f3f4c;
-$light-gray: #eaeaec;
-
-// Widget
-$widget-message-color: #999;
-
-@import "./header/header";
+$list-font-color: #eaeaec;
